# sciplot_graphO

./: CMakeLists.txt  README.md  graphs.cpp  main.cpp  test.cpp
sciplot/examples/: example-sincos-functions.cpp
